Add build dependencies for heroku

--- a/src/app/interview/interview.component.html
+++ b/src/app/interview/interview.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" [style.height.px]="height" [style.width.px]="width">
-    <a href=""> <fa-icon 
+    <a routerLink="/" routerLinkActive="active"> <fa-icon 
         [icon]="backIcon" size="2x" [styles]="{'stroke': 'white', 'color': 'white'}"> Zurück</fa-icon></a>
 
     
