--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,15 +1,8 @@
 .background {
-    background-image: url("../../../assets/img/map.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
     background-color: black;
-    width: 100vh;
-    height: 100vh;
-    padding: 0;
-    margin:0;
-    top:0;
-    left: 0;
-    position: fixed;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
 }
 
 .marker {
@@ -26,4 +19,51 @@
     background-image: url("../../../assets/img/marker_unlocked.png");
     background-size: contain;
     position:fixed;
+}
+
+.map {
+    height: 100vh;
+    margin: 0 auto;
+    display: table;
+}
+
+.info {
+    position: fixed;
+    width:10vh;
+    height:10vh;
+    margin:0 auto;
+    color:white;
+    top:5vh;
+}
+
+.scanner {
+    position: fixed;
+    width:10vh;
+    height:10vh;
+    margin:0 auto;
+    color:white;
+    top:5vh;
+}
+
+#loading  {
+    background-color: black;
+    width: 100%;
+    height:100%;
+    z-index: 12;
+    top:0;
+    left:0;
+    position: absolute;
+    align-items: center;
+
+}
+
+.spinner {
+    width:20vh;
+    height:20vh;
+    vertical-align: middle;
+    position: absolute;
+    top:50%;
+    left:50%;
+    margin-top:-10vh;
+    margin-left:-10vh;
 }
