--- a/src/app/pages/interview/interview.component.scss
+++ b/src/app/pages/interview/interview.component.scss
@@ -1,11 +1,10 @@
 .wrapper {
-    background-color: grey;
+    background-color: black;
     color:white;
-}
-
-.player {
-    color:white;
-    background-color: white;
+    width:100%;
+    height:100%;
+    padding:0;
+    margin:0;
 }
 
 .details {
@@ -30,3 +29,24 @@
 ::ng-deep .mat-accent .mat-slider-track-fill {
     background-color: white;
 } 
+
+.person {
+    border-top: 1px solid white;
+    font-size: 3vh;
+    font-weight: lighter;
+}
+.name {
+    font-size: 5vh;
+    font-weight: normal;
+}
+
+.space {
+    margin-bottom: 5vh;
+}
+
+.small {
+    font-size:2.5vh;
+    font-weight: normal;
+    padding: 0;
+    margin-bottom:0.8vh;
+}
