--- a/src/app/components/nav-back/nav-back.component.scss
+++ b/src/app/components/nav-back/nav-back.component.scss
@@ -7,6 +7,6 @@
     text-align: center;
     padding-top: 5vh;
     border-top: 1px solid white;
-    bottom:0;
+    bottom:0px;
     position: absolute;
 }
