--- a/src/app/pages/scanner/scanner.component.scss
+++ b/src/app/pages/scanner/scanner.component.scss
@@ -1,7 +1,7 @@
 .wrapper {
     background-color: black;
     width:100%;
-    height:100%;
+    height:80vh;
     color: white;
     font-size: 3vh;
 }
