--- a/src/app/components/nav-back/nav-back.component.html
+++ b/src/app/components/nav-back/nav-back.component.html
@@ -1,6 +1,4 @@
-<div class="footer" (click)="goBack()">
-
-    <fa-icon 
-        [icon]="backIcon" size="1.5x" [styles]="{'stroke': 'white', 'color': 'white'}">  </fa-icon> Zurück zur Übersicht
-
-</div>
+<div class="footer" id="wrapper" (click)="goBack()">
+    <i class="fas fa-arrow-left"></i> Zurück zur
+    Übersicht
+  </div>
