--- a/src/app/pages/info/info.component.html
+++ b/src/app/pages/info/info.component.html
@@ -1,5 +1,23 @@
 <div class="wrapper">
-    <app-header></app-header>
-    
-    <app-nav-back></app-nav-back>
+
+  <div class="row">
+    <div class="col-md-2 col-lg-3"></div>
+    <div class="col-md-8 col-lg-6 middle">
+      <app-header></app-header>
+      <div class="text">
+        Ein Projekt der Kulturkommision "kultur baltschieder" zum 20 Jahr Jubiläum des Unwetters in Baltschieder am
+        16.10.2000.
+        <br>
+        <br>
+        Verteilt im ganzen Dorf sind Stehlen mit Fotos von der Verwüstung sowie den Räumungsarbeiten angebracht.
+        <br><br>
+        Scanne einen der QR-Codes neben den Fotos, um das dazugehörige Interview freizuschalten. Dieses kann
+        anschliessend
+        auf dieser Website angehört werden.
+      </div>
+      <app-nav-back></app-nav-back>
+    </div>
+
+    <div class="col-md-2 col-lg-3"></div>
+  </div>
 </div>
