--- a/src/app/pages/interview/interview.component.html
+++ b/src/app/pages/interview/interview.component.html
@@ -1,21 +1,34 @@
 <div class="wrapper">
-    <app-header></app-header>
-    <div *ngIf="locked">
+  <div class="row">
+    <div class="col-md-2 col-lg-3 hidden-sm"></div>
+    <div class="col-md-8 col-lg-6 middle col-sm-12">
+      <app-header></app-header>
+      <div *ngIf="locked && loaded">
         <app-locked></app-locked>
-    </div>
+      </div>
 
-    <div *ngIf="!locked">
-        <div class="person">
-            <ul class="details">
-                <p class="small">gesprochen von </p>
-                <li><p class="name"> {{ marker.speaker.getName() }}</p></li>
-                <p class="space"></p>
-                <li>Beruf: {{ marker.speaker.profession }} </li>
-                <li>Funktion: {{ marker.speaker.action }}</li>
-                <li>Alter damals: {{ marker.speaker.age }}</li>
-            </ul>
+      <div *ngIf="!locked">
+        <div class="player">
+          <app-player [filename]="marker.filename"></app-player>
         </div>
-    </div>
-    <app-nav-back></app-nav-back>
-</div>
+        <div class="person">
+          <ul class="details">
+            <p class="small">gesprochen von </p>
+            <li>
+              <p class="name"> {{ marker.speaker.getName() }}</p>
+            </li>
+            <p class="space"></p>
 
+            <div class="text">
+              <li>Beruf: {{ marker.speaker.profession }} </li>
+              <li>Funktion: {{ marker.speaker.action }}</li>
+              <li>Alter damals: {{ marker.speaker.age }}</li>
+            </div>
+          </ul>
+        </div>
+      </div>
+      <app-nav-back></app-nav-back>
+    </div>
+
+    <div class="col-md-2 col-lg-3 hidden-sm-down"></div>
+  </div>
