--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,14 @@
 .outlet {
     overflow: hidden;
 }
+
+#wrapper {
+   // background-color: black;
+    height:100%;
+    width:100%;
+    background-color: var(--background-color);
+}
+
+.outlet::-webkit-scrollbar {
+    display: none;
+  }
