--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,7 @@
-.logo {
+header {
     width:100%;
+    background-image: url("../../../assets/img/logo.png");
+    height: 20vh;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
