--- a/src/app/components/locked/locked.component.html
+++ b/src/app/components/locked/locked.component.html
@@ -1,3 +1,8 @@
-<p>locked works!</p>
+<div class="wrapper">
+<div class="heading"><p>Seite gesperrt!</p></div>
+
 <fa-icon 
         [icon]="lockIcon" size="6x" [styles]="{'stroke': 'white', 'color': 'white'}">  </fa-icon> 
+<br><br>
+        <p> Du musst zunächst das dazugehörige Bild besuchen, um dieses Interview freizuschalten!</p>
+</div>
