--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,8 +1,7 @@
 .background {
-    background-color: black;
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
+    background-color: var(--background-color);
+    min-width: 100vw;
+    min-height: 100vh;
 }
 
 .marker {
@@ -22,31 +21,38 @@
 }
 
 .map {
-    height: 100vh;
+    height: auto;
+    max-width: 100%;
     margin: 0 auto;
     display: table;
+    font-size: 7vh;
 }
 
 .info {
     position: fixed;
-    width:10vh;
-    height:10vh;
     margin:0 auto;
     color:white;
-    top:5vh;
+    top:5%;
+    left:5vw;
+    font-size: 10vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 .scanner {
     position: fixed;
-    width:10vh;
-    height:10vh;
     margin:0 auto;
     color:white;
-    top:5vh;
+    top:5%;
+    left:80vw;
+    font-size:10vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
 #loading  {
-    background-color: black;
+    background-color: var(--background-color);
     width: 100%;
     height:100%;
     z-index: 12;
