--- a/src/app/pages/info/info.component.scss
+++ b/src/app/pages/info/info.component.scss
@@ -1,5 +1,39 @@
 .wrapper {
-    width:100vw;
-    height:100vh;
-    background-color: black;
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--background-color);
+  color: white;
+  font-size: 2.5vh;
+  line-height: normal;
+}
+
+.text {
+  padding-left: 5vw;
+  padding-right: 5vw;
+  padding-top: 2vh;
+  line-break: strict;
+  align-items: center;
+  overflow: normal;
+  min-height: 65vh;
+}
+
+app-nav-back {
+  width: 100%;
+}
+
+.middle {
+  //border: 1px solid #CFD0D1;
+ // border-style: inset;
+  padding: 0 !important;
+  -webkit-box-shadow: 6px 10px 64px -18px black;
+  -moz-box-shadow: 6px 10px 64px -18px black;
+  box-shadow: 6px 10px 64px -18px black;
+  z-index: 10;
+}
+
+
+@media screen and (max-width: 540px) {
+    .middle {
+        box-shadow: none !important;
+    }
 }
