--- a/src/app/pages/scanner/scanner.component.scss
+++ b/src/app/pages/scanner/scanner.component.scss
@@ -1,7 +1,80 @@
-.wrapper {
-    background-color: black;
+.info {
+    width:90%;
+    margin:auto;
+    vertical-align: middle;
+    height:15vh;
+    line-height: normal;
+    text-align: center;
+    font-size: 4vh;
+    color:var(--text-color);
+}
+
+.scanner {
+ //   position: absolute;
+  //  bottom:15vh;
+  //  height:50vh;
+  width:100%;
+  min-height:50vh;
+}
+
+:host zxing-scanner::ng-deep video {
     width:100%;
-    height:80vh;
-    color: white;
+   // object-fit: contain;
+  }
+
+.video {
+    width:100%;
+    height:100%;
+}
+
+  #loading  {
+    background-color: var(--background-color);
+    height:50vh;
+    width:100%;
+    z-index: 12;
+    align-items: center;
+}
+
+.spinner {
+    width:20vh;
+    height:20vh;
+    vertical-align: middle;
+    margin:auto;
+}
+
+.middle {
+    //border: 1px solid #CFD0D1;
+   // border-style: inset;
+    padding: 0 !important;
+    -webkit-box-shadow: 6px 10px 64px -18px black;
+    -moz-box-shadow: 6px 10px 64px -18px black;
+    box-shadow: 6px 10px 64px -18px black;
+    z-index: 10;
+  }
+
+  @media screen and (max-width: 540px) {
+    .middle {
+        box-shadow: none !important;
+    }
+}
+
+#info {
+    text-align: center;
     font-size: 3vh;
+    color: white;
+    padding-bottom:1vh;
+}
+
+.success {
+    font-size:15vh;
+    color:#E4D16A;
+    text-align: center;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    position:absolute;
+}
+
+canvas {
+    text-align: center;
 }
