--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/scss/bootstrap-reboot';
+@import '~bootstrap/scss/bootstrap-grid';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
-    background-color: blue; /*replace with your color*/
-}
-
-::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
-    background-color: skyblue;  /*replace with your color*/
-}
-
-
-::ng-deep .mat-accent .mat-slider-thumb {
-    background-color: black;
-} 
-::ng-deep .mat-accent .mat-slider-thumb-label {
-    background-color: black;
-} 
-::ng-deep .mat-accent .mat-slider-track-fill {
-    background-color: black;
-} 
+:root {
+    --primary-color: #ffffff;
+    --background-color: #1A181B;
+    --text-color: #CFD0D1;
+  }
