--- a/src/app/components/nav-back/nav-back.component.html
+++ b/src/app/components/nav-back/nav-back.component.html
@@ -1,4 +1,4 @@
 <div class="footer" id="wrapper" (click)="goBack()">
-    <i class="fas fa-arrow-left"></i> Zurück zur
+    <i class="fas fa-arrow-left arrow"></i> Zurück zur
     Übersicht
   </div>
