--- a/src/app/pages/teaser/teaser.component.html
+++ b/src/app/pages/teaser/teaser.component.html
@@ -3,16 +3,26 @@
   <header>
   </header>
   <div class="row">
-      <div class="col-md-1 hidden-sm-down"></div>
-      <div class="col-md-10">
-        <div class="player">
-            <app-player [filename]="'teaser_ausserberg.mp3'"></app-player>
-          </div>
+    <div class="col-md-1 hidden-sm-down"></div>
+    <div class="col-md-10">
+      <div class="player">
+        <app-player [filename]="'teaser_nellen.mp3'"></app-player>
       </div>
-      <div class="col-md-1 hidden-sm-down"></div>
+    </div>
+    <div class="col-md-1 hidden-sm-down"></div>
   </div>
-  
-  <img src="../../../assets/img/map.png" class="img-fluid map" id="map" />
 
-
+  <div id="container">
+    <img src="../../../assets/img/map-min.jpg" class="img-fluid map" id="map" />
+    <div class="text">
+      <div class="title">zeitzeugen </div>
+      <div class="info-text">
+        Mit einem künstlerischen Zugang gedenkt ‘kulturbaltschieder’ den schwierigen und eindrücklichen Momenten der
+        Überschwemmungen vom 15. Oktober 2000 im Dorf Baltschieder. Geplant ist eine Fotoausstellung der besonderen Art,
+        die durch Audioberichte von Zeitzeugen die Besucher auf eine Reise durch Raum und Zeit mitnimmt.
+        Der Start erfolgt am 27. August 2020 um 18:30 Uhr mit einer Vernissage auf dem Dorfplatz, und endet am 15. Oktober, dem 20.
+        Jahrestag des Unglücks, mit einer schlichten Abschlussfeier.
+      </div>
+    </div>
+  </div>
 </div>
