--- a/src/app/components/locked/locked.component.scss
+++ b/src/app/components/locked/locked.component.scss
@@ -1,9 +1,12 @@
 .wrapper {
     margin: auto;
-    width:80vw;
+    width:80%;
     font-size: 3vh;
     line-height: 4vh;
     text-align: center;
+    margin-bottom:10vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: lighter;
 }
 
 .heading {
@@ -12,4 +15,6 @@
     margin-top:5vh;
     text-align: center;
     font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: lighter;
 }
