--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,21 +1,28 @@
-<div class="background" #mapContent (scroll)="onResize($event)" (click)="setMarker($event)">
+<div class="wrapper">
+  <div class="row">
+    <div class="col-md-3 col-lg-4"></div>
+    <div class="col-md-6 col-lg-4 middle">
+      <app-header></app-header>
 
-    <img src="../../../assets/img/map.png" class="img-fluid map" id="map" />
-</div>
+      <div class="background" #mapContent (scroll)="onResize($event)" (click)="setMarker($event)">
+        <img src="../../../assets/img/map.jpg" style="margin-top:-6vh" class="img-fluid map" id="map" />
+      </div>
 
-<div [class]="marker.unlocked ? 'marker-unlocked' : 'marker'" *ngFor="let marker of markerService.getMarkers()" 
-    [style.left]="marker.left" [style.top]="marker.top"
-    [style.color]="marker.unlocked ? '#E4D16A' : ''"
-    (click)="onClickMarker(marker.id)">
-</div>
+      <i [class]="'fas fa-map-marker-alt ' + (marker.unlocked ? 'marker-unlocked' : 'marker')" 
+        *ngFor="let marker of markerService.getMarkers()" [style.left]="marker.left" [style.top]="marker.top" 
+        (click)="onClickMarker(marker.id)"></i> 
 
-<i (click)="showInfo()" class="fas fa-info-circle info" id="info" ></i>
-<i (click)="showScanner()" class="fas fa-qrcode scanner" id="scanner"></i>
+      <i (click)="showInfo()" class="fas fa-info-circle info" id="info"></i>
+      <i (click)="showScanner()" class="fas fa-qrcode scanner" id="scanner"></i>
 
+      <div (window:resize)="onResize($event)"></div>
+      
+    </div>
 
+    <div class="col-md-3 col-lg-4"></div>
+  </div>
 
-<div (window:resize)="onResize($event)"></div>
-
-<div id="loading">
+  <div id="loading">
     <mat-spinner class="spinner"></mat-spinner>
+  </div>
 </div>
