--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,66 +1,69 @@
+
 .background {
-    background-color: var(--background-color);
-    min-width: 100vw;
-    min-height: 100vh;
+    width:100%;
 }
 
 .marker {
     width:5vh;
     height:5vh;
-    background-image: url("../../../assets/img/marker.png");
+    //background-image: url("../../../assets/img/marker.png");
     background-size: contain;
     position:fixed;
+    font-size: 5vh;
+    color: var(--background-color);
+    text-align: center;
 }
 
 .marker-unlocked {
     width:5vh;
     height:5vh;
-    background-image: url("../../../assets/img/marker_unlocked.png");
+   // background-image: url("../../../assets/img/marker_unlocked.png");
     background-size: contain;
     position:fixed;
+    font-size: 5vh;
+    color: #E4D16A;
+    text-align: center;
 }
 
 .map {
     height: auto;
     max-width: 100%;
-    margin: 0 auto;
-    display: table;
+    min-width: 100%;
+    width:100%;
+    margin: 0;
+    //display: table;
     font-size: 7vh;
+    position: absolute;
 }
 
 .info {
     position: fixed;
-    margin:0 auto;
-    color:white;
-    top:5%;
-    left:5vw;
-    font-size: 10vh;
-    background-color: rgba(0, 0, 0, 0.3);
+    margin-left:0;
+    color:black;
+    font-size: 8vh;
+    //background-color: rgba(0, 0, 0, 0.3);
     border-radius: 50%;
     cursor: pointer;
 }
 
 .scanner {
     position: fixed;
-    margin:0 auto;
-    color:white;
-    top:5%;
-    left:80vw;
-    font-size:10vh;
-    background-color: rgba(0, 0, 0, 0.3);
+    margin-left:90%;
+    color:black;
+    font-size:8vh;
+    //background-color: rgba(0, 0, 0, 0.3);
     cursor: pointer;
 }
 
 #loading  {
     background-color: var(--background-color);
-    width: 100%;
-    height:100%;
-    z-index: 12;
+    width: 110vw;
+    height:100vh;
+    z-index: 25;
     top:0;
     left:0;
     position: absolute;
     align-items: center;
-
 }
 
 .spinner {
@@ -73,3 +76,34 @@
     margin-top:-10vh;
     margin-left:-10vh;
 }
+
+.wrapper {
+    width: 100%;
+    min-height: 100vh;
+    background-color: var(--background-color);
+    color: white;
+    font-size: 2.5vh;
+    line-height: normal;
+    position: relative;
+  }
+  
+  app-nav-back {
+    width: 100%;
+  }
+  
+  .middle {
+    //border: 1px solid #CFD0D1;
+   // border-style: inset;
+    padding: 0 !important;
+    -webkit-box-shadow: 6px 10px 64px -18px black;
+    -moz-box-shadow: 6px 10px 64px -18px black;
+    box-shadow: 6px 10px 64px -18px black;
+    z-index: 10;
+  }
+  
+  
+  @media screen and (max-width: 540px) {
+      .middle {
+          box-shadow: none !important;
+      }
+  }
