--- a/src/app/components/nav-back/nav-back.component.scss
+++ b/src/app/components/nav-back/nav-back.component.scss
@@ -7,12 +7,28 @@
     padding-bottom:4vh;
     border-top: 1px solid #CFD0D1;
     cursor: pointer;
-    position:relative;
-    font-size:2vw;
+    position:absolute;
+    bottom:0px;
+    font-size:21px;
+    font-weight: lighter;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.arrow {
+    font-size: 21px;
+    margin-right:3px;
+}
+
+/*
 @media screen and (max-width: 767px) {
     .footer {
-        font-size: 8vw;
+        font-size: 3vh;
+    }
+
+    .arrow {
+        font-size: 3vh;
+        margin-right:5px;
     }
 }
+
+*/
