--- a/src/app/pages/info/info.component.scss
+++ b/src/app/pages/info/info.component.scss
@@ -3,18 +3,19 @@
   min-height: 100vh;
   background-color: var(--background-color);
   color: white;
-  font-size: 2.5vh;
+  font-size: 1rem;
   line-height: normal;
 }
 
 .text {
-  padding-left: 5vw;
-  padding-right: 5vw;
+  padding-left: 8%;
+  padding-right: 8%;
   padding-top: 2vh;
   line-break: strict;
-  align-items: center;
   overflow: normal;
   min-height: 65vh;
+  font-weight: lighter;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 app-nav-back {
@@ -29,6 +30,7 @@ app-nav-back {
   -moz-box-shadow: 6px 10px 64px -18px black;
   box-shadow: 6px 10px 64px -18px black;
   z-index: 10;
+  min-height:99vh;
 }
 
 
