--- a/src/app/pages/interview/interview.component.scss
+++ b/src/app/pages/interview/interview.component.scss
@@ -2,9 +2,9 @@
     background-color: var(--background-color);
     color:white;
     width:100%;
-    height:100%;
     padding:0;
     margin:0;
+    min-height: 100vh;
 }
 
 .details {
@@ -20,7 +20,7 @@
     min-height:45vh;
 }
 .name {
-    font-size: min(5vw, 45px);
+    font-size: min(5vw, 55px);
     font-weight: normal;
 }
 
@@ -39,7 +39,8 @@
 .player {
     width:80%;
     margin: auto;
-    height:20vh;
+    margin-bottom:5vh;
+    margin-top:-5vh;
 }
 .text {
     line-height: normal;
@@ -54,6 +55,7 @@
     -moz-box-shadow: 6px 10px 64px -18px black;
     box-shadow: 6px 10px 64px -18px black;
     z-index: 10;
+    min-height:100vh;
   }
 
   @media screen and (max-width: 540px) {
