--- a/src/app/pages/scanner/scanner.component.html
+++ b/src/app/pages/scanner/scanner.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-2 col-lg-3 hidden-sm"></div>
-  <div class="col-md-8 col-lg-6 middle col-sm-12">
+  <div class="col-md-3 col-lg-4 hidden-sm"></div>
+  <div class="col-md-3 col-lg-4 middle col-sm-12">
     <app-header></app-header>
 
-    <div id="info">🎥 Keine Kamera gefunden. Bitte Zugriff auf Kamera aktivieren</div>
+    <div id="infoText">⌛ Lädt Video...</div>
 
     <div class="success" *ngIf="success">
         <i class="fas fa-check-circle"></i>
@@ -27,5 +27,5 @@
 
     
   </div>
-  <div class="col-md-2 col-lg-3 hidden-sm"></div>
+  <div class="col-md-3 col-lg-4 hidden-sm"></div>
 </div>
