--- a/src/app/pages/scanner/scanner.component.scss
+++ b/src/app/pages/scanner/scanner.component.scss
@@ -15,6 +15,7 @@
   //  height:50vh;
   width:100%;
   min-height:50vh;
+  margin-bottom:5vh;
 }
 
 :host zxing-scanner::ng-deep video {
@@ -50,6 +51,7 @@
     -moz-box-shadow: 6px 10px 64px -18px black;
     box-shadow: 6px 10px 64px -18px black;
     z-index: 10;
+    min-height: 99vh;
   }
 
   @media screen and (max-width: 540px) {
@@ -58,11 +60,13 @@
     }
 }
 
-#info {
+#infoText {
     text-align: center;
-    font-size: 3vh;
+    font-size: 1rem;
     color: white;
-    padding-bottom:1vh;
+    padding-bottom:5%;
+    line-break: auto;
+    height: auto;
 }
 
 .success {
