--- a/src/app/pages/teaser/teaser.component.scss
+++ b/src/app/pages/teaser/teaser.component.scss
@@ -1,24 +1,70 @@
 .wrapper {
     background-color: var(--background-color);
     min-height:100vh;
+    min-width:100vw;
 }
 
 header {
-    width:100%;
+    width:60%;
+    height:10vh;
     background-image: url("../../../assets/img/logo.png");
-    height: 20vh;
     background-repeat: no-repeat;
     background-size: contain;
 }
 
 .map {
     height: auto;
-    max-width: 100%;
-    margin: 0 auto;
-    display: table;
+    max-width: 105vw;
+    width:105vw;
+    //margin: 0 auto;
+    padding:0;
+    margin:0;
+    //display: table;
+    margin-top: 2vh;
+    opacity:0.15;
+    z-index:-5;
 }
 
 .player {
     width:80%;
     margin: auto;
+    margin-bottom:3vh;
+    margin-top:3vh;
+    z-index:5;
+}
+
+.title {
+    color:white;
+    padding-left:10vw;
+    padding-right:8vw;
+    font-weight: lighter;
+    font-size: 5vh;
+    line-height: 3.8vh;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom:5vh;
+    margin-top:4vh;
+}
+
+.info-text {
+    color:white;
+    padding-left:10vw;
+    padding-right:10vw;
+    font-weight: lighter;
+    font-size: 3vh;
+    line-height: 3.8vh;
+    text-align: justify;
+    line-break: strict;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+
+.text {
+    position:absolute;
+    top:0;
+    left:0;
+}
+
+#container {
+    position: relative;
+    width: 100vw;
 }
