--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,10 +3,24 @@
 @import '~bootstrap/scss/bootstrap-grid';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif}
 
 :root {
     --primary-color: #ffffff;
     --background-color: #1A181B;
     --text-color: #CFD0D1;
   }
+
+
+  .ui-dialog.ui-widget-content {
+    background-image: none;
+    background-color: red;
+}
+
+.dialog-class {
+  mat-dialog-container {
+      padding: 0;
+      background-color: transparent;
+      background-image: none;
+  }
+}
