--- a/src/app/components/player/player.component.scss
+++ b/src/app/components/player/player.component.scss
@@ -56,7 +56,7 @@ $--progress-left:0px;
     height:100%;
     border-radius: 25px;
     background-size: 440px 440px;
-    -webkit-background-size: 44p0x 440px;
+    -webkit-background-size: 44px 440px;
     -webkit-animation: animate-stripes 2s linear infinite;
 }
 
