Add alternative marker positioning

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="row">
     <div class="col-md-3 col-lg-4"></div>
-    <div class="col-md-6 col-lg-4 middle">
+    <div class="col-md-6 col-lg-4 middle" id="container">
       <app-header></app-header>
 
       <div class="background" #mapContent (scroll)="onResize($event)" (click)="setMarker($event)">
