--- a/src/app/pages/interview/interview.component.scss
+++ b/src/app/pages/interview/interview.component.scss
@@ -23,6 +23,7 @@
 .name {
     font-size: 35px;
     font-weight: normal;
+    margin-top:15px;
 }
 
 .space {
@@ -67,5 +68,6 @@
     .name {
         font-size: 22px;
         font-weight: normal;
+        margin-top:15px;
     }
 }
