--- a/src/app/components/nav-back/nav-back.component.scss
+++ b/src/app/components/nav-back/nav-back.component.scss
@@ -4,7 +4,7 @@
     color: #CFD0D1;
     text-align: center;
     padding-top: 4vh;
-    padding-bottom:4vh;
+    //padding-bottom:4vh;
     border-top: 1px solid #CFD0D1;
     cursor: pointer;
     position:absolute;
